2010-05-04 21:06  alpha@paranoici.org

	* tags/0.3/ardesia/src/annotate.c: 
          - Add to take the focus before ungrab this prevent some deadlock


2010-05-04 20:07  alpha@paranoici.org

	* tags/0.3/ardesia/src/annotate.c: 
          - Delete the shape recognition
	    and arrow with eraser In the future I'll thing if it is the case
	    to support the erasesing inside the select path but for the
	    moment this feature is not available


2010-05-04 18:57  alpha@paranoici.org

	* tags/0.3/ardesia/src/background.c: 
          - Ported by hand the fix for
	    the background after reselect the tab in the taskbar In the past
	    if you select as background a color then you put as background
	    null, you repush the ardesia tab and the the tool show wrongly
	    the old coloured background instead the transparent one


2010-05-04 18:47  alpha@paranoici.org

	* tags/0.3, tags/0.3/ardesia: 
          - Tagging 0.3 after a testing this
	    will be released as the last version for ubuntu karmic in the
	    trunk I'll develop I think that at september will be possible
	    have the 1.0 stable for ubuntu lucid Stay tuned


2010-05-04 17:08  alpha@paranoici.org

	* trunk/ardesia/src/Makefile.in, trunk/ardesia/src/annotate.c,
	  trunk/ardesia/src/ardesia.c, trunk/ardesia/src/ardesia.glade,
	  trunk/ardesia/src/ardesia_horizontal.glade,
	  trunk/ardesia/src/background.c, trunk/ardesia/src/callbacks.c:
	  - First version compliant with ubuntu lucid that will become the
	    more stable used operating system (I hope) - ubuntu karmik is
	    not tested and supported; you must consider this operating
	    system obsolete - windows is not tested and I'm not interested
	    at the moment to this; I have seen that the z order depends a
	    lot on the specific window manager I'm alone and then I want
	    before do a LUCID version Anyway on windows the develoment is
	    stopped and I have lost a lot of unuseful work caused by the